--- a/Assignment6/uno/app/globals.css
+++ b/Assignment6/uno/app/globals.css
@@ -7,12 +7,14 @@
   --foreground: #171717;
 }
 
+/* Disabling automatic dark theme
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
 }
+*/
 
 body {
   color: var(--foreground);
