CSS fixes & some server fixes

--- a/Assignment6/uno/app/game/[id]/game-style.css
+++ b/Assignment6/uno/app/game/[id]/game-style.css
@@ -30,20 +30,24 @@
     color: black;  /* No white text */
 }
 
-.red {
+.Red {
     background-color: #e74c3c;
 }
 
-.green {
+.Green {
     background-color: #27ae60;
 }
 
-.blue {
+.Blue {
     background-color: #3498db;
 }
 
-.yellow {
+.Yellow {
     background-color: #f1c40f;
+}
+
+.Wild {
+    background-color: #e90ff1;
 }
 
 .player-hand {
